--- a/application-form/src/App.css
+++ b/application-form/src/App.css
@@ -1,38 +1,31 @@
-.App {
+.Application-form{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 120px 800px auto ;
+  grid-template-areas: "nav nav nav"
+                        "main main main"
+                        "footer footer footer";
+
+}
+nav{
+  grid-area: nav;
+  border: 1px solid black;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+nav.h1{
+  font-size: 200px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+main{
+grid-area: main;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+}
+footer{
+grid-area: footer;
+border: 1px solid black;
+padding: 20px;
 }
