--- a/facebook-clone/src/App.scss
+++ b/facebook-clone/src/App.scss
@@ -4,7 +4,7 @@
   border: 1px solid black;
   display: grid;
   grid-template-rows:60px auto 60px;
-  grid-template-columns: 600px auto auto;
+  grid-template-columns: 600px auto 300px;
   grid-template-areas:"navbar navbar navbar"
                       "sidebar main main"
                       "footer footer footer" ;
@@ -20,8 +20,9 @@
 }
 .main{
   grid-area:main;
-  border: 1px solid black;
+  
 }
+
 
 
 
