--- a/facebook-clone/src/components/main/Main.scss
+++ b/facebook-clone/src/components/main/Main.scss
@@ -1,8 +1,12 @@
 .main{
      display: grid;
-     grid-template-columns:auto 300px;
      grid-template-rows: auto;
-     grid-template-areas: "maincontent mainright";
+     grid-template-areas:"maincontent";
+     border: 1px solid black;
+     overflow: scroll;
+     scrollbar-color:rgb(0, 153, 255);
+      scrollbar-width: thin;
+     
     
 }
 
