--- a/facebook-clone/src/components/main/mainpost/Mainpost.scss
+++ b/facebook-clone/src/components/main/mainpost/Mainpost.scss
@@ -4,6 +4,7 @@
     gap: 10px;
     width: 100%;
     margin: 10px 0;
+    position: relative;
     & .main-detail-post {
       // display: flex;
       border: 1px solid #ddd;
