--- a/facebook-clone/src/components/maincontent/Maincontent.scss
+++ b/facebook-clone/src/components/maincontent/Maincontent.scss
@@ -1,12 +1,13 @@
 .maincontent{
-    border: 1px solid black;
+    border: 5px solid black;
+    height: 20rem;
         display: flex;
         gap: .9%;
        flex-direction: row;
        cursor: pointer;
 
 
-    .maincontentitems {
+    
         img{
             position: absolute;
             width: 3%;
@@ -17,7 +18,7 @@
         }
 
         p{
-            position:absolute;
+           
             font-size: 1rem;
             top: 31%;
             color: white;
@@ -43,6 +44,6 @@
             height: 200px;
 
         }
-    }
+    
 
 }
