--- a/facebook-clone/src/components/main/Main.scss
+++ b/facebook-clone/src/components/main/Main.scss
@@ -6,7 +6,7 @@
      overflow: scroll;
      scrollbar-color:rgb(0, 153, 255);
       scrollbar-width: thin;
-     
+     position: relative;
     
 }
 
