--- a/facebook-clone/src/components/maincontent/Maincontent.scss
+++ b/facebook-clone/src/components/maincontent/Maincontent.scss
@@ -1,29 +1,27 @@
 .maincontent{
-    // border: 5px solid black;
+    border: 5px solid black;
     height: 20rem;
         display: flex;
         gap: .9%;
        flex-direction: row;
        cursor: pointer;
-       position:relative;
 
 
     
         img{
-            position:absolute;
+            position: absolute;
             width: 3%;
             border-radius: 50%;
             margin: 1%;
             height: 4rem;
-            // border: 3px solid rgb(10,102,255);
+            border: 3px solid rgb(10,102,255);
         }
 
         p{
            
             font-size: 1rem;
-            top: 80%;
-        position: relative;   
-            color:black;
+            top: 31%;
+            color: white;
             margin-left: 2.3%;
             text-align: center;
             
@@ -43,7 +41,7 @@
            
         }
         source{     
-            height: 180px;
+            height: 200px;
 
         }
     
