--- a/twitter/src/components/Leftsidebar/leftSideBar.scss
+++ b/twitter/src/components/Leftsidebar/leftSideBar.scss
@@ -22,11 +22,7 @@
        align-items: end;
        gap: 8%;
        border-radius: 20px;
-       text-align: center;
-       
-
-    
-   
+       text-align: center;    
     }
     .twittermenu:hover{
         cursor: pointer;
@@ -55,6 +51,46 @@
         height: 3rem;
         color: white;
         background-color: rgb(29,155,240);
+    }
+    .profileitems{
+        display: flex;
+        justify-content: end;
+        padding: 1%;
+    }
+    .item{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: right;
+        
+        gap:3%;
+        padding: 1%;
+        width: 45%;
+        
+    }
+    .item:hover{
+        border-radius: 50px;
+        cursor: pointer;
+        background-color:rgba(255, 255, 255, 0.299);
+
+    }
+    .profilenamebluetik{
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+
+    }
+    .profilenamebluetik h5{
+        color:rgb(29,155,240);
+    }
+
+
+
+
+    .profileitems img{
+           width: 25%;
+           border-radius: 50px;
     }
 
 
