--- a/twitter/src/components/Middle/middle.scss
+++ b/twitter/src/components/Middle/middle.scss
@@ -1,5 +1,13 @@
 .Middle{
     grid-area: Middle;
     border: .1px solid rgba(255, 255, 255, 0.299);
+    display: grid;
+    grid-template-columns:auto;
+    grid-template-rows:4rem 12rem auto;
+    grid-template-areas:"navbuttons "
+                "newpost  "
+                "posts ";
+    overflow: scroll;
+
    }
   
