--- a/twitter/src/components/Middle/Posts/posts.scss
+++ b/twitter/src/components/Middle/Posts/posts.scss
@@ -1,7 +1,9 @@
 .posts{
     grid-area: posts;
     display: grid;
-    border: 1px solid white;
+    
+    position:sticky;
+    border-top:1px solid rgba(255, 255, 255, 0.299); 
     
     
 }
@@ -10,33 +12,59 @@
     flex-direction: row;
     margin: 5px;
     color: white;
-    // line-height: 10px;
+    gap: 1%;
+    border-bottom:1px solid rgba(255, 255, 255, 0.299);
+    
+    .postedimage img{
+        width: 95%;
+        border:1px solid rgba(255, 255, 255, 0.299); 
+        border-radius:10px;
+        
+    }
 
     .postimage img{
-        width: 100%;
+        width: 95%;
         height: 3rem;
+        margin: 2%;
         border-radius: 50px;
        
     }
     .postitem{
+        width: 100%;
         display: flex;
         flex-direction: column;
+
+
+        
 
         .postitemnameid{
             display: flex;
             flex-direction: row;
+
+            h6{
+                color:rgb(29,155,240);
+                
+            }
+            p{
+                color:rgba(255, 255, 255, 0.299);
+            }
             
         }
-    }
-    .postedimage{
-        overflow: hidden;
-        width: 40%;
-        height: 20rem;
+
+        
        
     }
-    .postedimage{
-        width: 50%;
-        
-    }
+   .postcomment{
+    // border: 1px solid ;
+    color:rgba(255, 255, 255, 0.299);
+    display: flex;
+    flex-direction: row;
+    margin: 3px;
+   padding: 1%;
+   justify-content: space-around;
+   color: white;
+   }
+    
+    
 
 }
