--- a/twitter/src/components/Rightsidebar/rightSideBar.scss
+++ b/twitter/src/components/Rightsidebar/rightSideBar.scss
@@ -1,4 +1,16 @@
 .Rightsidebar{
     grid-area: Rightsidebar;
     // border: 1px solid rgb(220, 217, 212);
+        border: .1px solid rgba(255, 255, 255, 0.299);
+        display: grid;
+        grid-template-columns:auto;
+        grid-template-rows:4rem 12rem 15rem 15rem;
+        grid-template-areas:"Searchsection "
+                    "Subscribesection  "
+                    "Trendingsection "
+                    "Followingsection ";
+        overflow: scroll;
+        scrollbar-width: none;
+    
+
 }
