--- a/twitter/src/components/Rightsidebar/Searchsection/Searchsection.scss
+++ b/twitter/src/components/Rightsidebar/Searchsection/Searchsection.scss
@@ -1,19 +1,34 @@
 .Searchsection{
-    border: 1px solid rgba(255, 255, 255, 0.299);
-    margin: 2%;
-    width: 40%;
-    border-radius: 15%;
-    padding: 1%;
+    grid-area: Searchsection;
+    // border: 1px solid rgba(255, 255, 255, 0.299);
+
+    height: 9rex;
     
-   span{
-    color: white;
-   }
+
+
+    .Searchsectioninput{
+    
+    background-color: rgba(255, 255, 255, 0.299);
+    margin: 10px;
+    width: 50%;
+    border-radius: 15px;
+    padding: 1%;
+    height: 2.5rem;
+
+    span{
+        color: white;
+       }
+
+
+    }
+    
+  
         
 
     input{
         border: none;
        outline: none;
-        background-color: black;
+       background-color: rgba(255, 255, 255, 0);
         color: whitesmoke;
         text-align: center;
     }
