--- a/twitter/src/components/Rightsidebar/Subscribesection/Subscribesection.scss
+++ b/twitter/src/components/Rightsidebar/Subscribesection/Subscribesection.scss
@@ -1,3 +1,17 @@
-.Subscribersection{
-    border: .1px solid rgba(255, 255, 255, 0.299);
+.Subscribesection{
+    grid-area: Subscribesection;
+    // border: .1px solid rgba(255, 255, 255, 0.299);
+
+
+    .Subscribesectioncontainer{
+        border: .1px solid rgba(255, 255, 255, 0.299);
+        padding: 2%;
+        width: 50%;
+      margin: 2%;
+      border-radius: 10px;
+      color: white;
+      
+    
+    }
+    
 }
