--- a/twitter/src/components/Rightsidebar/Trendingsection/Trendingsection.scss
+++ b/twitter/src/components/Rightsidebar/Trendingsection/Trendingsection.scss
@@ -1,3 +1,42 @@
 .Trendingsection{
-    border: .1px solid rgba(255, 255, 255, 0.299);
+    grid-area:Trendingsection ;
+    // border: .1px solid rgba(255, 255, 255, 0.299);
+    display: flex;
+    flex-direction: column;
+
+    .Trendingsectionitem{
+        grid-area:Trendingsectionitem ;
+        border: .1px solid rgba(255, 255, 255, 0.299);
+        width: 50%;
+        margin: 10px;
+        padding: 10px;
+        color:  white;
+        border-radius: 10px;
+
+        .Trendingseebtn{
+            background-color:black;
+            color:rgb(29,155,240);
+        }
+        .Ammssection{
+            display: flex;
+            flex-direction: row;
+            border: .1px solid rgba(255, 255, 255, 0.299);
+            width: 100%;
+            
+            padding: 1%;
+            color: white;
+            
+             div{
+                width:50%;
+             }
+        }
+
+
+        img{
+            width: 100%;
+        }
+        
+    }
+    
+    
 }
