--- a/twitter/src/components/Rightsidebar/rightSideBar.scss
+++ b/twitter/src/components/Rightsidebar/rightSideBar.scss
@@ -1,12 +1,12 @@
 .Rightsidebar{
         grid-area: Rightsidebar;
-        border: .1px solid rgba(255, 255, 255, 0.299);
-        border: 1px solid white;
+        // border: .1px solid rgba(255, 255, 255, 0.299);
+        // border: 1px solid white;
         display:grid;
         grid-template-columns:auto;
-        grid-template-rows:1px 5rem 10rem auto;
-        grid-template-areas:"Searchsection "
-                            "Subscribesection  "
+        grid-template-rows:4rem 12rem;
+        grid-template-areas:"Searchsection"
+                            "Subscribesection"
                            "Trendingsection "
                             "Followingsection ";
 
@@ -14,6 +14,6 @@
                             
         overflow: scroll;
         scrollbar-width: none;
-    
+       color: white;
 
 }
